# Xe-Forge

./: CONTRIBUTING.md  README.md  pyproject.toml
examples/conv_pooling/: activations.py  conv_pooling.py  conv_pooling.yaml  initializer.py  quantization.py
examples/conv_pooling/dump/v0/: optimized_kernel.py
examples/fused_moe/: fused_moe.py  fused_moe.yaml
examples/fused_moe/dump/v0/: optimized_kernel.py
examples/mamba/: mamba.yaml
examples/mamba/dump/v0/: optimized_kernel.py
examples/mamba/dump/v1/: optimized_kernel.py
examples/rmsnorm_rope/: rmsnorm_rope.py  rmsnorm_rope.yaml
examples/rmsnorm_rope/dump/v0/: optimized_kernel.py
examples/swin_window_attn/: 1_window_attn_Fwd.py  1_window_attn_Fwd.yaml
examples/swin_window_attn/dump/v0/: optimized_kernel.py
examples/vllm/: 1_BatchedMoE.py  1_BatchedMoE.yaml  2_FusedMoE.py  2_FusedMoE.yaml  3_UnifiedAttention.py  3_UnifiedAttention.yaml  4_UnifiedAttention_MixedDtype.yaml  README.md
knowledge_base/cm/xpu/: cm_patterns.yaml
knowledge_base/common/: algorithmic_patterns.yaml  correctness.yaml
knowledge_base/sycl/xpu/: cutlass_sycl_framework.yaml
knowledge_base/triton/xpu/: algorithmic_patterns.yaml  correctness.yaml  fusion_patterns.yaml  memory_patterns.yaml  optimization_levels.yaml  optimization_strategies.md
outputs/kernels/: Model_20260605_140524_optimized.py  Model_20260605_140524_original.py  Model_20260605_175120_optimized.py  Model_20260605_175120_original.py  Model_20260609_081850_optimized.py  Model_20260609_081850_original.py  Model_20260609_125243_optimized.py  Model_20260609_125243_original.py  Model_20260611_084709_original.py  Model_20260612_080457_original.py  Model_20260612_112609_optimized.py
scripts/: README.md  benchmark_to_roofline_csv.py  roofline.py  spec_to_roofline_csv.py
src/xe_forge/: cli.py  dsl_registry.py  models.py  pipeline.py
src/xe_forge/agents/: analyzer_agent.py  optimizer_agent.py  react_agent.py
src/xe_forge/core/: __init__.py  cm_compiler.py  cm_executor.py  dtype_utils.py  executor.py  profiler.py  spec_loader.py  validator.py
src/xe_forge/core/tile_search/: agent.py
src/xe_forge/prompts/: device_prompts.py
src/xe_forge/skills/: benchmark.py
src/xe_forge/utils/: path_resolution.py
test_kernels/: 200_CM_Gemm.cpp  200_CM_Gemm.yaml
tests/: test_spec_loader.py  test_validator.py
