[project]
name = "xe-forge"
version = "0.2.0"
description = "Multi-stage kernel optimization for GPU computing"
authors = [{ name = "Intel Labs" }]
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.24.0",
  "pydantic>=2.0.0",
  "dspy-ai>=3.1.3",
  "litellm>=1.0.0",
  "python-dotenv>=1.0.0",
  "PyYAML>=6.0.0",
  "httpx>=0.24.0",
  "jinja2>=3.1.0",
  "ai-bench @ git+https://github.com/libxsmm/AI-bench@c11b0ed4801e9dd4eeaa48c5aed8136dd439dfea",
]

[project.optional-dependencies]
intel = [
  "torch==2.11+xpu",
  "pytorch-triton-xpu",
]
nvidia = [
  "torch>=2.0.0",
  "pytorch-triton",
]
wandb = ["weave>=0.52.24"]

[project.scripts]
xe-forge = "xe_forge.cli:main"
xe-forge-skill = "xe_forge.skills:main"

[dependency-groups]
dev = [
  "pre-commit>=4.6.0",
  "pytest>=7.0.0",
  "pytest-cov>=4.0.0",
  "ruff>=0.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
index-strategy = "unsafe-best-match"
conflicts = [
  [
    { extra = "intel" },
    { extra = "nvidia" },
  ],
]

[tool.uv.sources]
torch = [
  { index = "pytorch-xpu", extra = "intel" },
  { index = "pytorch-cuda", extra = "nvidia" },
]
triton-xpu = { index = "pytorch-xpu" }
pytorch-triton-xpu = { index = "pytorch-xpu" }
pytorch-triton = { index = "pytorch-cuda" }

[[tool.uv.index]]
name = "pytorch-xpu"
url = "https://download.pytorch.org/whl/xpu"

[[tool.uv.index]]
name = "pytorch-cuda"
url = "https://download.pytorch.org/whl/cu128"

[tool.hatch.build.targets.wheel]
packages = ["src/xe_forge"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = ["test_kernels", "knowledge_base/**/examples", "outputs/kernels", "examples", "templates"]

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort
  "Q",   # flake8-quotes
  "UP",  # pyupgrade
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "RUF", # ruff-specific rules
]
ignore = [
  "E501",   # line too long (handled by formatter)
  "F821",   # undefined name (dspy dynamic attrs)
  "B008",   # function call in default arg
  "B006",   # mutable default arg
]

[tool.ruff.lint.isort]
known-first-party = ["xe_forge"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

